# bard

./: .gitignore  Changelog.md  Changelog.rst  MANIFEST.in  README.md  setup.py
bard/: __init__.py  __main__.py  album.py  analysis_database.py  analysis_schema.sql  backup.py  bard.py  bard_ext.cpp  comparesongs.py  config.example  config.py  dynamicrange.py  essentia_helper.py  ffprobemetadata.py  generate_analysis_schema.py  generate_l_tables.py  generatedplaylist.py  musicbrainz.sql  musicbrainz_database.py  musicdatabase.py  musicdatabase_songs.py  normalizetags.py  percentage.py  playlist.py  playlistmanager.py  playlistsonginfo.py  searchplaylist.py  searchquery.py  song.py  song_utils.py  terminalcolors.py  terminalkeyboard.py  user.py  utils.py  web.py  web_utils.py
bard/alembic/: cookbook.py  env.py
bard/audiofile/: CMakeLists.txt  audiofile.cpp  audiofile.h  bufferaviocontext.cpp  bufferaviocontext.h  bufferdecodeoutput.cpp  bufferdecodeoutput.h  common.h  decodeoutput.cpp  decodeoutput.h  encoder.cpp  encoder.h  filedecodeoutput.cpp  filedecodeoutput.h  log.cpp  log.h  pyaudiofile.cpp  pytest.py  referencedata.cpp  referencedata.h  test-decode.cpp  test-getinfo.cpp  version.h
bard/db/: __init__.py  analysis.py  core.py  musicbrainz.py
bard/musicbrainz_importer/: check_extra_imports.py  check_missing_uuids.py  import.py  largedictintint.py  mbenums.py  mbimporter.py  test.py  (+10 more)
config/: bard
docs/: backups.md  configuring_postgresql.md  configuring_sqlite.md  convert_sqlite_db_to_postgresql.sh  database.md  database.txt
picard_plugin/: README.md  bard.py  file_naming_format.txt
scripts/: bard  bard_bash_completion  download_flags.py  generate-keys.sh  migrate_database.py
(+49 files in other folders)
